# datasette-build

./: README.md  pyproject.toml
.github/workflows/: publish.yml
datasette_build/: __init__.py  cli.py  core.py  datasette_plugin.py  default_formats.py  hookspecs.py  sqlite_utils_plugin.py
tests/: test_build.py
tests/demo/: cities.csv  countries.tsv  museums.json
